# architecture-patterns

./: pyproject.toml
architecture_patterns/: model.py
tests/: test_allocates.py  test_batches.py
